Implemented author collection and API
